--- a/app/MyApp/index.html
+++ b/app/MyApp/index.html
@@ -1685,7 +1685,7 @@
     </script>
 
     <script type="text/template" id="template-courseAnswerReview">
-        <div class="multipleAnswerReview" style="margin-left: 20px; margin-right: 20px">
+        <div class="multipleAnswerReview">
             <% if(!learner) { %>
                 <h3 ><%=App.languageDict.attributes.Answer_Review_Section %></h3>
             <% } %>
@@ -1791,7 +1791,7 @@
                     <button class="btn btn-info" onclick="showComposePopup()" id="mailComposeButton"><%= languageDict.attributes.Compose %></button>
                     <span class="new_mails"></span>
                 <% } %>
-                <span id="searchOnMail"><input id="search-text" type="text" style="height: 30px;width: 243px; border-radius: 9px; border:1px solid #000000;"/>&nbsp;&nbsp;<button class="btn btn-primary" id="search-mail" style="margin-top: -8px;"><%= languageDict.attributes.Go %></button></span>
+                <span id="searchOnMail"><input id="search-text" type="text" style="height: 30px; border-radius: 9px; border:1px solid #000000;"/>&nbsp;&nbsp;<button class="btn btn-primary" id="search-mail" style="margin-top: -8px;"><%= languageDict.attributes.Go %></button></span>
             </b>
         </div>
         <div id="errorMessage">
